# app-python-template

./: .editorconfig  Makefile.am  README  configure.ac
data/: Makefile.am  org.gnome.Usage.appdata.xml.in  org.gnome.Usage.desktop.in  org.gnome.Usage.gschema.xml  usage.gresource.xml
data/gtk/: menus.ui
data/icons/: Makefile.am
data/ui/: about-dialog.ui  window.ui
po/: POTFILES.in
src/: Makefile.am  application.py  log.py  main.py  window.py
